--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@pixi/particle-emitter": "^5.0.8",
+    "howler": "^2.2.4",
+    "@google/genai": "^1.28.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "pixi.js": "^8.14.0",
     "zustand": "^5.0.8",
-    "@google/genai": "^1.24.0",
-    "pixi.js": "^8.2.5",
-    "react-tooltip": "^5.30.0"
+    "i18next": "^25.6.0",
+    "react-i18next": "^16.2.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "vitest": "^4.0.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
